# scythe

./: .gitignore  GUI_SUMMARY.md  README.md
gui/: Cargo.toml  Makefile  README.md  build.sh  components.d.ts  index.html  justfile  package-lock.json  package.json  vite.config.ts
gui/src/: App.vue  main.ts  style.css  vite-env.d.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: README.md
gui/src-tauri/src/: api_client.rs  commands.rs  main.rs  models.rs
gui/src/router/: index.ts
gui/src/stores/: agents.ts  connection.ts
gui/src/views/: AgentDetails.vue  Agents.vue  Dashboard.vue  Files.vue  Logs.vue  Settings.vue  Tasks.vue
implant/: Makefile  Makefile.enterprise  simple_test.cpp  test_advanced_obfuscation  test_advanced_obfuscation.cpp  test_base64  test_base64.cpp  test_boost  test_enterprise_build.cpp  test_reverse_base64  test_reverse_base64.cpp  test_simple_advanced  test_simple_advanced.cpp
implant/src/: enterprise_implant.cpp  enterprise_implant.h  enterprise_main.cpp  implant.cpp  implant.h  results.h  source.cpp  tasks.cpp  tasks.h
nimplant/: README.md  build.sh  main.nim  nimplant.nim.cfg
nimplant/modules/: copy.nim  getAV.nim  reg.nim  upload.nim  whoami.nim
nimplant/util/: webClient.nim
server/: Cargo.toml  ENTERPRISE_CRYPTO_README.md
server/src/: main.rs
server/src/api/: routes.rs
server/src/auth/: mod.rs
server/src/crypto/: config.rs  mod.rs  monitoring.rs  tests.rs
server/src/features/: data_structs.rs
