[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["SCYTHE Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/scythe-framework/scythe"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
webbrowser = "0.8"
tauri = { version = "1.5", features = ["api-all"] }
tauri-build = "1.5"
