[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = "9"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
bcrypt = "0.15"
env_logger = "0.11"
log = "0.4"
toml = "0.8"
thiserror = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
tokio-util = "0.7"
metrics = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
zeroize = "1.7"
secrecy = "0.8"
ring = "0.17"
